update crime, external features, ptv data
1. add comments
2. rerun codes

--- a/notebooks/External_Features.ipynb
+++ b/notebooks/External_Features.ipynb
@@ -20,6 +20,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "801750b4",
+   "metadata": {},
+   "source": [
+    "# load datasets"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "prepared-explanation",
@@ -91,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "quick-court",
    "metadata": {},
    "outputs": [
@@ -99,7 +107,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5452/3063215064.py:3: FutureWarning: In a future version of pandas all arguments of DataFrame.pivot will be keyword-only.\n",
+      "/tmp/ipykernel_6129/3063215064.py:3: FutureWarning: In a future version of pandas all arguments of DataFrame.pivot will be keyword-only.\n",
       "  school_counts = schools.groupby('suburb')['type'].value_counts().reset_index(name='count').pivot('suburb','type','count').reset_index().fillna(0)\n"
      ]
     }
@@ -115,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "female-compiler",
    "metadata": {},
    "outputs": [],
@@ -125,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "imposed-consciousness",
    "metadata": {},
    "outputs": [],
@@ -136,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "delayed-queue",
    "metadata": {},
    "outputs": [],
@@ -146,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "experienced-crowd",
    "metadata": {},
    "outputs": [],
@@ -156,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "consolidated-marketing",
    "metadata": {},
    "outputs": [],
@@ -173,7 +181,7 @@
    "id": "average-water",
    "metadata": {},
    "source": [
-    "# Analyses"
+    "# Analysis"
    ]
   },
   {
@@ -186,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "alternate-russia",
    "metadata": {},
    "outputs": [
@@ -196,7 +204,7 @@
        "<AxesSubplot:title={'center':'Suburbs with Top 10 Total PTV Station Counts'}, ylabel='Suburb'>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -218,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "virtual-pregnancy",
    "metadata": {},
    "outputs": [
@@ -228,7 +236,7 @@
        "<AxesSubplot:title={'center':'Suburbs with Top 10 Tram Station Counts'}, ylabel='Suburb'>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -258,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "western-groove",
    "metadata": {},
    "outputs": [
@@ -276,7 +284,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -287,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "automotive-message",
    "metadata": {
     "scrolled": true
@@ -487,7 +495,7 @@
        "80        1.0            NaN            NaN            NaN  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -503,8 +511,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d658ee44",
+   "metadata": {},
+   "source": [
+    "### Plots"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "id": "voluntary-spine",
    "metadata": {},
    "outputs": [
@@ -572,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 16,
    "id": "ec4592aa",
    "metadata": {
     "scrolled": false
@@ -614,9 +630,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 17,
    "id": "similar-kansas",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -624,7 +642,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -644,8 +662,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f28e9f9c",
+   "metadata": {},
+   "source": [
+    "### Correlation Analysis"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
    "id": "accepted-bracelet",
    "metadata": {},
    "outputs": [],
@@ -660,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 19,
    "id": "6ea3624c",
    "metadata": {},
    "outputs": [
@@ -668,7 +694,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5452/378878450.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "/tmp/ipykernel_6129/378878450.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  sub.corr(method='spearman') ['rent'].sort_values()\n"
      ]
     },
@@ -711,7 +737,7 @@
        "Name: rent, dtype: float64"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 21,
    "id": "0a736fab",
    "metadata": {},
    "outputs": [
@@ -754,7 +780,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -773,20 +799,12 @@
     "sub_useful = sub[['rent_rank','flats', 'houses_rank', 'rented', 'turnover_rank', 'education_rank', \n",
     "     'occupation_rank', 'sold', 'income']]\n",
     "\n",
-    "sns.heatmap(sub_useful.corr(method='spearman'), annot=True,transpar)"
+    "sns.heatmap(sub_useful.corr(method='spearman'), annot=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "bf3b0c69",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 22,
    "id": "1ae59e37",
    "metadata": {},
    "outputs": [
@@ -794,7 +812,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_5452/820962962.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "/tmp/ipykernel_6129/820962962.py:1: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  sub.corr(method='spearman') ['rent_rank'].sort_values()\n"
      ]
     },
@@ -837,7 +855,7 @@
        "Name: rent_rank, dtype: float64"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 23,
    "id": "sweet-approval",
    "metadata": {},
    "outputs": [
@@ -856,7 +874,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_13666/4120093332.py:2: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
+      "/tmp/ipykernel_6129/4120093332.py:2: FutureWarning: The default value of numeric_only in DataFrame.corr is deprecated. In a future version, it will default to False. Select only valid columns or specify the value of numeric_only to silence this warning.\n",
       "  sns.heatmap(sub.corr(method='spearman'))\n"
      ]
     },
@@ -866,7 +884,7 @@
        "<AxesSubplot:>"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -884,205 +902,6 @@
    "source": [
     "plt.subplots(1,1,figsize=(10,7))\n",
     "sns.heatmap(sub.corr(method='spearman'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "labeled-syria",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "southern-polls",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "schools_all = pd.read_excel('../data/raw/abs_data/education.xlsx', sheet_name = 3, skiprows = 4)\n",
-    "\n",
-    "schools = schools_all.loc[schools_all['State/Territory'] == 'b Vic.']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "id": "warming-germany",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Year</th>\n",
-       "      <th>State/Territory</th>\n",
-       "      <th>Affiliation (Gov/Non-gov)</th>\n",
-       "      <th>Affiliation (Gov/Cath/Ind)</th>\n",
-       "      <th>School Type</th>\n",
-       "      <th>School Count</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>2021</td>\n",
-       "      <td>b Vic.</td>\n",
-       "      <td>a Government</td>\n",
-       "      <td>a Government</td>\n",
-       "      <td>a Primary school</td>\n",
-       "      <td>1137.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>2021</td>\n",
-       "      <td>b Vic.</td>\n",
-       "      <td>a Government</td>\n",
-       "      <td>a Government</td>\n",
-       "      <td>b Secondary school</td>\n",
-       "      <td>247.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>14</th>\n",
-       "      <td>2021</td>\n",
-       "      <td>b Vic.</td>\n",
-       "      <td>a Government</td>\n",
-       "      <td>a Government</td>\n",
-       "      <td>c Combined school</td>\n",
-       "      <td>82.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15</th>\n",
-       "      <td>2021</td>\n",
-       "      <td>b Vic.</td>\n",
-       "      <td>a Government</td>\n",
-       "      <td>a Government</td>\n",
-       "      <td>d Special school</td>\n",
-       "      <td>81.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16</th>\n",
-       "      <td>2021</td>\n",
-       "      <td>b Vic.</td>\n",
-       "      <td>b Non-Government</td>\n",
-       "      <td>b Catholic</td>\n",
-       "      <td>a Primary school</td>\n",
-       "      <td>394.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1045</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>b Vic.</td>\n",
-       "      <td>b Non-Government</td>\n",
-       "      <td>b Catholic</td>\n",
-       "      <td>d Special school</td>\n",
-       "      <td>8.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1046</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>b Vic.</td>\n",
-       "      <td>b Non-Government</td>\n",
-       "      <td>c Independent</td>\n",
-       "      <td>a Primary school</td>\n",
-       "      <td>46.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1047</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>b Vic.</td>\n",
-       "      <td>b Non-Government</td>\n",
-       "      <td>c Independent</td>\n",
-       "      <td>b Secondary school</td>\n",
-       "      <td>15.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1048</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>b Vic.</td>\n",
-       "      <td>b Non-Government</td>\n",
-       "      <td>c Independent</td>\n",
-       "      <td>c Combined school</td>\n",
-       "      <td>140.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1049</th>\n",
-       "      <td>2010</td>\n",
-       "      <td>b Vic.</td>\n",
-       "      <td>b Non-Government</td>\n",
-       "      <td>c Independent</td>\n",
-       "      <td>d Special school</td>\n",
-       "      <td>13.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>144 rows × 6 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Year State/Territory Affiliation (Gov/Non-gov)  \\\n",
-       "12    2021          b Vic.              a Government   \n",
-       "13    2021          b Vic.              a Government   \n",
-       "14    2021          b Vic.              a Government   \n",
-       "15    2021          b Vic.              a Government   \n",
-       "16    2021          b Vic.          b Non-Government   \n",
-       "...    ...             ...                       ...   \n",
-       "1045  2010          b Vic.          b Non-Government   \n",
-       "1046  2010          b Vic.          b Non-Government   \n",
-       "1047  2010          b Vic.          b Non-Government   \n",
-       "1048  2010          b Vic.          b Non-Government   \n",
-       "1049  2010          b Vic.          b Non-Government   \n",
-       "\n",
-       "     Affiliation (Gov/Cath/Ind)         School Type  School Count  \n",
-       "12                 a Government    a Primary school        1137.0  \n",
-       "13                 a Government  b Secondary school         247.0  \n",
-       "14                 a Government   c Combined school          82.0  \n",
-       "15                 a Government    d Special school          81.0  \n",
-       "16                   b Catholic    a Primary school         394.0  \n",
-       "...                         ...                 ...           ...  \n",
-       "1045                 b Catholic    d Special school           8.0  \n",
-       "1046              c Independent    a Primary school          46.0  \n",
-       "1047              c Independent  b Secondary school          15.0  \n",
-       "1048              c Independent   c Combined school         140.0  \n",
-       "1049              c Independent    d Special school          13.0  \n",
-       "\n",
-       "[144 rows x 6 columns]"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "schools"
    ]
   }
  ],
